examples/test/testpolicy8257.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8257
  namespace: namespace134
spec:
  podSelector:
    matchLabels:
      key17: value19
      key40: value0
      key33: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value31
          key0: value4
          key30: value3
      podSelector:
        matchLabels:
          key42: value12
          key43: value40
          key49: value33
